--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,6 @@ repositories {
         name 'sponge'
         url 'http://repo.spongepowered.org/maven'
     }
-    //maven { url "http://tomp2p.net/dev/mvn/" }
     maven { url "http://repo.maven.apache.org/maven2" }
 }
 
@@ -48,17 +47,13 @@ task fatJar(type: Jar) {
 
 shadowJar {
     dependencies {
-        include dependency('org.slf4j:slf4j-simple')
-        include dependency('org.slf4j:slf4j-api')
         include dependency('commons-logging:commons-logging')
-        //include dependency('org.apache.commons:commons-lang3')
-        //include dependency('org.apache.httpcomponents:httpcore')
-        //include dependency('org.apache.httpcomponents:httpclient')
-        //include dependency(group: 'com.googlecode.json-simple', name: 'json-simple', version:'1.1.1')
-        //include dependency(group: 'org.java-websocket', name: 'Java-WebSocket', version:'1.3.0')
-        include dependency(group: 'net.tomp2p', name: 'opus-wrapper', version:'1.3')
-        include dependency(group: 'org.abstractj.kalium', name: 'kalium', version:'0.4.0')
-        //include dependency(group: 'net.jodah', name: 'typetools', version:'0.4.3')
+        include dependency('org.apache.commons:commons-lang3')
+        include dependency('org.apache.httpcomponents:httpcore')
+        include dependency('org.apache.httpcomponents:httpclient')
+        include dependency('com.googlecode.json-simple:json-simple')
+        include dependency('org.java-websocket:Java-WebSocket')
+        include dependency('net.jodah:typetools')
 
         relocate 'org.apache.http', 'shaded.apache.http'
         relocate 'org.apache.commons', 'shaded.apache.commons'
