--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 defaultTasks 'build', 'shadowJar'
 
 group = 'com.nguyenquyhy'
-version = '1.2.2'
+version = '1.3.0'
 description = 'A plugin to connect Discord and Minecraft'
 sourceCompatibility = 1.8
 
@@ -39,10 +39,9 @@ spongestart{
 }
 
 dependencies {
-    compile 'org.spongepowered:spongeapi:4.0.3'
+    compile('org.spongepowered:spongeapi:4.0.3')
     compile files('libs/Discord4J-2.5.2-shaded.jar')
 //    compile "com.github.austinv11:Discord4j:2.4.9:shaded"
-//    compile files('libs/Discord4J-2.2.7.jar')
 //    compile 'org.apache.httpcomponents:httpcore:4.3.2'
 //    compile 'org.apache.httpcomponents:httpclient:4.3.3'
 //    compile 'org.java-websocket:Java-WebSocket:1.3.0'
