--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 defaultTasks 'build', 'shadowJar'
 
 group = 'com.nguyenquyhy'
-version = '1.3.1'
+version = '1.3.2'
 description = 'A plugin to connect Discord and Minecraft'
 sourceCompatibility = 1.8
 
@@ -34,7 +34,7 @@ spongestart{
     //optional configs
     //spongeVanillaBuild 'LATEST'
     //spongeForgeBuild 'LATEST'
-    forgeServerFolder 'run'
+    //forgeServerFolder 'run'
     //vanillaServerFolder 'run/vanilla'
 }
 
