--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 defaultTasks 'build', 'shadowJar'
 
 group = 'com.nguyenquyhy'
-version = '1.4.0'
+version = '2.0.0'
 description = 'A plugin to connect Discord and Minecraft'
 sourceCompatibility = 1.8
 
@@ -40,7 +40,8 @@ spongestart{
 
 dependencies {
     compile('org.spongepowered:spongeapi:4.1.0')
-    compile('de.btobastian.javacord:javacord:2.0.11:shaded')
+    compile files('libs/javacord-2.0.11-shaded.jar')
+//    compile('de.btobastian.javacord:javacord:2.0.11:shaded')
 //    compile "com.github.austinv11:Discord4j:2.4.9:shaded"
 //    compile 'org.apache.httpcomponents:httpcore:4.3.2'
 //    compile 'org.apache.httpcomponents:httpclient:4.3.3'
@@ -57,15 +58,15 @@ task fatJar(type: Jar) {
 
 shadowJar {
     dependencies {
-//        include dependency('commons-logging:commons-logging')
-//        include dependency('org.apache.commons:commons-lang3')
-//        include dependency('org.apache.httpcomponents:httpcore')
-//        include dependency('org.apache.httpcomponents:httpclient')
+        include dependency('commons-logging:commons-logging')
+        include dependency('org.apache.commons:commons-lang3')
+        include dependency('org.apache.httpcomponents:httpcore')
+        include dependency('org.apache.httpcomponents:httpclient')
 //        include dependency('com.googlecode.json-simple:json-simple')
 //        include dependency('org.java-websocket:Java-WebSocket')
 //        include dependency('net.jodah:typetools')
-//
-//        relocate 'org.apache.http', 'shaded.apache.http'
-//        relocate 'org.apache.commons', 'shaded.apache.commons'
+
+        relocate 'org.apache.http', 'shaded.apache.http'
+        relocate 'org.apache.commons', 'shaded.apache.commons'
     }
 }
