--- a/examples/config-multiple.json
+++ b/examples/config-multiple.json
@@ -1,13 +1,15 @@
 {
   "tokenStore": "JSON",
   "botToken": "APP_BOT_USER_TOKEN",
+  "minecraftBroadcastTemplate": "&2<BROADCAST> %s",
   "channels": [
     {
       "discordId": "DISCORD_PUBLIC_CHANNEL_ID",
       "discordInviteCode": "DISCORD_INVITATION_CODE",
       "discord": {
         "authenticatedChatTemplate": "%s",
-        "anonymousChatTemplate": "`%a:` %s"
+        "anonymousChatTemplate": "`%a:` %s",
+        "broadcastTemplate": "_<BROADCAST> %s_"
       },
       "minecraft": {
         "chatTemplate": "&7<%a> &f%s"
