--- a/examples/config-simple.json
+++ b/examples/config-simple.json
@@ -1,6 +1,7 @@
 {
   "tokenStore": "JSON",
   "botToken": "APP_BOT_USER_TOKEN",
+  "minecraftBroadcastTemplate": "&2<BROADCAST> %s",
   "channels": [
     {
       "discordId": "DISCORD_PUBLIC_CHANNEL_ID",
@@ -11,7 +12,8 @@
         "joinedTemplate": "_%s just joined the server_",
         "leftTemplate": "_%s just left the server_",
         "serverUpMessage": "Server has started.",
-        "serverDownMessage": "Server has stopped."
+        "serverDownMessage": "Server has stopped.",
+        "broadcastTemplate": "_<BROADCAST> %s_"
       },
       "minecraft": {
         "chatTemplate": "&7<%a> &f%s"
