--- a/examples/config-simple.json
+++ b/examples/config-simple.json
@@ -1,6 +1,8 @@
 {
   "tokenStore": "JSON",
   "botToken": "APP_BOT_USER_TOKEN",
+  "prefixBlacklist": "",
+  "cancelMessageFromBot": false,
   "minecraftBroadcastTemplate": "&2<BROADCAST> %s",
   "channels": [
     {
