--- a/examples/config-multiple.json
+++ b/examples/config-multiple.json
@@ -1,8 +1,8 @@
 {
   "tokenStore": "JSON",
   "botToken": "APP_BOT_USER_TOKEN",
-  "prefixBlacklist": "",
-  "cancelMessageFromBot": false,
+  "prefixBlacklist": ["!"],
+  "cancelAllMessagesFromBot": false,
   "minecraftBroadcastTemplate": "&2<BROADCAST> %s",
   "channels": [
     {
