--- a/examples/config-simple.json
+++ b/examples/config-simple.json
@@ -3,6 +3,7 @@
   "botToken": "APP_BOT_USER_TOKEN",
   "prefixBlacklist": ["!"],
   "cancelAllMessagesFromBot": true,
+  "botDiscordGame": "Minecraft",
   "minecraftBroadcastTemplate": "&2<BROADCAST> %s",
   "channels": [
     {
