Change documentation for new features

--- a/examples/config-multiple.json
+++ b/examples/config-multiple.json
@@ -1,9 +1,9 @@
 {
   "tokenStore": "JSON",
   "botToken": "APP_BOT_USER_TOKEN",
-  "prefixBlacklist": ["!"],
-  "cancelAllMessagesFromBot": false,
   "botDiscordGame": "Minecraft",
+  "prefixBlacklist": ["!"],
+  "ignoreBots": false,
   "minecraftBroadcastTemplate": "&2<BROADCAST> %s",
   "channels": [
     {
