--- a/examples/config-simple.json
+++ b/examples/config-simple.json
@@ -1,10 +1,9 @@
 {
   "tokenStore": "JSON",
   "botToken": "APP_BOT_USER_TOKEN",
-  "linkDiscordAttachments": true,
   "botDiscordGame": "Minecraft",
   "prefixBlacklist": ["!"],
-  "ignoreBots": true,
+  "ignoreBots": false,
   "minecraftBroadcastTemplate": "&2<BROADCAST> %s",
   "channels": [
     {
@@ -23,11 +22,11 @@
       },
       "minecraft": {
         "chatTemplate": "&7<%a> &f%s",
-        "attachmentTemplate": "[Attachment]",
-        "attachmentHoverTemplate": "Click to open attachment.",
-        "attachmentColor": "&3",
-        "defaultRole": "&eMember",
-        "roleBlacklist": ["Bot"]
+        "attachment": {
+          "template": "&3[Attachment]",
+          "hoverTemplate": "Click to open attachment.",
+          "allowLink": true
+        }
       }
     }
   ]
