Rename mention.template into mention.everyoneTemplate Documentation

--- a/examples/config-multiple.json
+++ b/examples/config-multiple.json
@@ -24,9 +24,9 @@
           "allowLink": false
         },
         "mention": {
-          "template": "&6@&3%a",
           "userTemplate": "&6@&e%a",
-          "roleTemplate": "&6@&a%r"
+          "roleTemplate": "&6@&a%r",
+          "everyoneTemplate": "&6@&3%a"
         },
         "roles": {
           "Admin": {
