--- a/examples/config-multiple.json
+++ b/examples/config-multiple.json
@@ -24,9 +24,10 @@
           "allowLink": false
         },
         "mention": {
-          "userTemplate": "&6@&e%a",
-          "roleTemplate": "&6@&a%r",
-          "everyoneTemplate": "&6@&3%a"
+          "userTemplate": "@%s",
+          "roleTemplate": "@%s",
+          "everyoneTemplate": "&6@%s",
+          "channelTemplate": "&9#%s"
         },
         "roles": {
           "Admin": {
