--- a/examples/config-multiple.json
+++ b/examples/config-multiple.json
@@ -23,6 +23,11 @@
           "hoverTemplate": "Please check Discord.",
           "allowLink": false
         },
+        "emoji": {
+          "template": "&b:%n:&r",
+          "hoverTemplate": "Click to view emjoi.",
+          "allowLink": true
+        },
         "mention": {
           "userTemplate": "@%s",
           "roleTemplate": "@%s",
